compiler/crates/lotml-syntax/src/parser.rs
//! The parser: hand-written recursive descent over the lexer's tokens, tolerant of errors.
//!
//! A statement or item that does not parse is reported once and skipped to the end of its
//! line — and of the block it opens — so the rest of the file still parses and every error
//! after it is a real one rather than a cascade.

use crate::ast::*;
use crate::lexer::{self, Token, TokenKind as T};
use crate::span::Span;
use crate::strings;

/// A syntax error: what was expected, where, and a fix when one is certain.
#[derive(Clone, Debug, PartialEq, Eq)]
pub struct SyntaxError {
    pub span: Span,
    pub message: String,
    pub expected: Vec<&'static str>,
    pub fix: Option<(Span, String)>,
    /// Stable code: `E0001` and up; see `lotml explain`.
    pub code: &'static str,
}

#[derive(Clone, Debug, PartialEq, Eq)]
pub struct Parsed {
    pub module: Module,
    pub errors: Vec<SyntaxError>,
    pub comments: Vec<Span>,
}

pub fn parse(text: &str) -> Parsed {
    let lexed = lexer::lex(text);
    let mut parser = Parser::new(text, lexed.tokens, 0);
    for error in lexed.errors {
        let fix = error.fix.map(|f| (error.span, f));
        let code = if fix.is_some() { "E0002" } else { "E0001" };
        parser.errors.push(SyntaxError { span: error.span, message: error.message, expected: vec![], fix, code });
    }
    let module = parser.module();
    let mut errors = parser.errors;
    errors.sort_by_key(|e| e.span.start);
    Parsed { module, errors, comments: lexed.comments }
}

/// Parse one expression from `text`, whose spans start at `base` in the enclosing file.
fn parse_expression(text: &str, base: u32) -> (Expr, Vec<SyntaxError>) {
    let lexed = lexer::lex(text);
    let mut parser = Parser::new(text, lexed.tokens, base);
    let expr = parser.test();
    if !matches!(parser.peek(), T::Newline | T::Eof) {
        parser.error_here("expected the end of the f-string field");
    }
    (expr, parser.errors)
}

struct Parser<'a> {
    text: &'a str,
    tokens: Vec<Token>,
    pos: usize,
    base: u32,
    errors: Vec<SyntaxError>,
    /// Set by the first error of a statement, so its cascade is not reported.
    reported: bool,
}

impl<'a> Parser<'a> {
    fn new(text: &'a str, tokens: Vec<Token>, base: u32) -> Parser<'a> {
        Parser { text, tokens, pos: 0, base, errors: Vec::new(), reported: false }
    }

    // Tokens ------------------------------------------------------------------------

    fn token(&self) -> Token {
        self.tokens[self.pos.min(self.tokens.len() - 1)]
    }

    fn peek(&self) -> T {
        self.token().kind
    }

    fn peek_at(&self, offset: usize) -> T {
        self.tokens[(self.pos + offset).min(self.tokens.len() - 1)].kind
    }

    fn span(&self) -> Span {
        self.shifted(self.token().span)
    }

    fn shifted(&self, span: Span) -> Span {
        Span { start: span.start + self.base, end: span.end + self.base }
    }

    fn previous_end(&self) -> u32 {
        if self.pos == 0 {
            return self.base;
        }
        self.tokens[self.pos - 1].span.end + self.base
    }

    fn since(&self, start: Span) -> Span {
        Span { start: start.start, end: self.previous_end().max(start.start) }
    }

    fn text_of_span(&self, span: Span) -> &'a str {
        let start = span.start.saturating_sub(self.base) as usize;
        let end = span.end.saturating_sub(self.base) as usize;
        self.text.get(start..end).unwrap_or("")
    }

    /// A token's text; empty for the tokens the lexer makes up, such as the last line's end.
    fn text_of(&self, token: Token) -> &'a str {
        self.text.get(token.span.range()).unwrap_or("")
    }

    fn bump(&mut self) -> Token {
        let token = self.token();
        if self.pos < self.tokens.len() - 1 {
            self.pos += 1;
        }
        token
    }

    fn at(&self, kind: T) -> bool {
        self.peek() == kind
    }

    fn eat(&mut self, kind: T) -> bool {
        if self.at(kind) {
            self.bump();
            true
        } else {
            false
        }
    }

    // Errors ------------------------------------------------------------------------

    fn report(
        &mut self,
        span: Span,
        message: String,
        expected: Vec<&'static str>,
        fix: Option<(Span, String)>,
        code: &'static str,
    ) {
        if self.reported {
            return;
        }
        self.reported = true;
        self.errors.push(SyntaxError { span, message, expected, fix, code });
    }

    fn found(&self) -> String {
        let token = self.token();
        match token.kind {
            T::Name | T::Int | T::Float | T::Str | T::Error => format!("`{}`", self.text_of(token)),
            kind => kind.describe().to_string(),
        }
    }

    fn error_here(&mut self, message: &str) {
        let found = self.found();
        let span = self.span();
        self.report(span, format!("{message}, found {found}"), vec![], None, "E0003");
    }

    /// Consume `kind` or report it missing, naming what it was expected after.
    fn expect(&mut self, kind: T, after: &str) -> bool {
        if self.eat(kind) {
            return true;
        }
        let found = self.found();
        let span = self.span();
        let fix = matches!(kind, T::Colon | T::RParen | T::RBracket | T::RBrace).then(|| {
            (Span { start: self.previous_end(), end: self.previous_end() }, kind.text().trim_matches('`').to_string())
        });
        self.report(
            span,
            format!("expected {} {after}, found {found}", kind.describe()),
            vec![kind.text()],
            fix,
            "E0003",
        );
        false
    }

    fn name(&mut self, what: &str) -> Ident {
        if self.at(T::Name) || self.peek().is_keyword() {
            let token = self.bump();
            return Ident { name: self.text_of(token).to_string(), span: self.shifted(token.span) };
        }
        let span = self.span();
        let found = self.found();
        self.report(span, format!("expected {what}, found {found}"), vec!["a name"], None, "E0003");
        Ident { name: String::new(), span }
    }

    /// Whether the last token ended a line, so a failed statement left nothing of it behind.
    fn at_line_start(&self) -> bool {
        self.pos > 0 && matches!(self.tokens[self.pos - 1].kind, T::Newline | T::Dedent)
    }

    /// Whether the next two tokens are `kind` twice with nothing between them: `&&`, `||`, `++`.
    fn doubled(&self, kind: T) -> bool {
        let at = self.pos.min(self.tokens.len() - 1);
        self.peek() == kind
            && self.peek_at(1) == kind
            && self.tokens.get(at + 1).is_some_and(|next| next.span.start == self.tokens[at].span.end)
    }

    /// `word` as a replacement for the tokens in `span`, keeping it apart from its neighbours.
    fn spaced(&self, span: Span, word: &str) -> String {
        let (start, end) = (span.start.saturating_sub(self.base) as usize, span.end.saturating_sub(self.base) as usize);
        let before =
            self.text.get(..start).and_then(|t| t.chars().next_back()).is_some_and(|c| !c.is_whitespace() && c != '(');
        let after = self.text.get(end..).and_then(|t| t.chars().next()).is_some_and(|c| !c.is_whitespace() && c != ')');
        format!("{}{word}{}", if before { " " } else { "" }, if after { " " } else { "" })
    }

    /// Report an operator from another language and read it as lotml's.
    fn foreign_operator(&mut self, kind: T, word: &str) -> Span {
        let first = self.span();
        self.bump();
        let mut span = first;
        if self.at(kind) && kind != T::Bang {
            span = Span { start: first.start, end: self.span().end };
            self.bump();
        }
        let written = self.text_of_span(span);
        let replacement = self.spaced(span, word);
        // Not `report`: the operator is understood, so the rest of the statement is still checked.
        self.errors.push(SyntaxError {
            span,
            message: format!("lotml writes `{word}`, not `{written}`"),
            expected: vec![],
            fix: Some((span, replacement)),
            code: "E0111",
        });
        span
    }

    /// Skip the rest of a logical line and any block it opens; used after an error.
    fn skip_line(&mut self) {
        let mut depth = 0usize;
        loop {
            match self.peek() {
                T::Eof => return,
                T::Indent => depth += 1,
                T::Dedent => {
                    if depth == 0 {
                        return;
                    }
                    depth -= 1;
                    if depth == 0 {
                        self.bump();
                        return;
                    }
                }
                T::Newline if depth == 0 => {
                    self.bump();
                    if self.at(T::Indent) {
                        continue;
                    }
                    return;
                }
                _ => {}
            }
            self.bump();
        }
    }

    // Items -------------------------------------------------------------------------

    fn module(&mut self) -> Module {
        let mut items = Vec::new();
        loop {
            self.reported = false;
            match self.peek() {
                T::Eof => break,
                T::Newline | T::Dedent => {
                    self.bump();
                }
                T::Indent => {
                    let span = self.span();
                    self.report(
                        span,
                        "a top-level item must start at column 1".into(),
                        vec![],
                        Some((span, String::new())),
                        "E0002",
                    );
                    self.bump();
                }
                _ => items.push(self.item()),
            }
        }
        Module { items }
    }

    fn item(&mut self) -> Item {
        let start = self.span();
        let before = self.pos;
        let item = match self.peek() {
            T::Fn => Item::Fn(self.fn_def(true)),
            T::Type => self.type_def(),
            T::Impl => Item::Impl(self.impl_def()),
            T::Trait => Item::Trait(self.trait_def()),
            T::From | T::Import => Item::Import(self.import()),
            T::Test => Item::Test(self.test_def()),
            _ => {
                self.unknown_item();
                Item::Error(self.since(start))
            }
        };
        if self.reported && (self.pos == before || !self.at_line_start()) {
            self.skip_line();
        }
        item
    }

    fn unknown_item(&mut self) {
        let token = self.token();
        let span = self.span();
        let text = self.text_of(token);
        let (message, fix, code) = match text {
            "def" => {
                ("lotml declares functions with `fn`, not `def`".to_string(), Some((span, "fn".to_string())), "E0101")
            }
            "class" => (
                "lotml has no classes: declare a record with `type` and its methods in `impl`".to_string(),
                None,
                "E0102",
            ),
            _ => (
                format!(
                    "expected an item — `fn`, `type`, `impl`, `trait`, `test`, `from` or `import` — found {}",
                    self.found()
                ),
                None,
                "E0003",
            ),
        };
        self.report(
            span,
            message,
            vec!["`fn`", "`type`", "`impl`", "`trait`", "`test`", "`from`", "`import`"],
            fix,
            code,
        );
        self.skip_line();
    }

    fn type_params(&mut self) -> Vec<TypeParam> {
        let mut params = Vec::new();
        if !self.eat(T::LBracket) {
            return params;
        }
        loop {
            let name = self.name("a type parameter");
            let bound = if self.eat(T::Colon) { Some(self.name("a trait bound")) } else { None };
            params.push(TypeParam { name, bound });
            if !self.eat(T::Comma) || self.at(T::RBracket) {
                break;
            }
        }
        self.expect(T::RBracket, "after the type parameters");
        params
    }

    fn fn_def(&mut self, needs_body: bool) -> FnDef {
        let start = self.span();
        self.bump(); // fn
        let name = self.name("the function's name");
        let type_params = self.type_params();
        let mut params = Vec::new();
        if self.expect(T::LParen, "after the function's name") {
            while !matches!(self.peek(), T::RParen | T::Newline | T::Eof | T::Colon) {
                params.push(self.param());
                if !self.eat(T::Comma) {
                    break;
                }
            }
            self.expect(T::RParen, "to close the parameters");
        }
        let (mut returns, mut error) = (None, None);
        if self.eat(T::Arrow) {
            returns = Some(self.type_expr());
            if self.eat(T::Bang) {
                error = Some(self.type_expr());
            }
        }
        let has_colon = self.at(T::Colon);
        let body = if has_colon || needs_body {
            if self.at(T::LBrace) {
                let span = self.span();
                self.report(
                    span,
                    "a lotml block starts with `:` and an indented line, not `{`".into(),
                    vec!["`:`"],
                    Some((span, ":".into())),
                    "E0103",
                );
                None
            } else if self.expect(T::Colon, "after the function's signature") {
                Some(self.block())
            } else {
                None
            }
        } else {
            self.eat(T::Newline);
            None
        };
        let doc = body.as_ref().and_then(|b| b.stmts.first()).and_then(|s| match &s.kind {
            StmtKind::Expr(Expr { kind: ExprKind::Str(parts), .. }) => Some(
                parts
                    .iter()
                    .flat_map(|l| &l.parts)
                    .map(|p| match p {
                        StrPart::Text(t) => t.as_str(),
                        StrPart::Expr { .. } => "",
                    })
                    .collect(),
            ),
            _ => None,
        });
        FnDef { span: self.since(start), name, type_params, params, returns, error, body, doc }
    }

    fn param(&mut self) -> Param {
        let start = self.span();
        let convention = match self.peek() {
            T::Inout => {
                self.bump();
                Convention::Inout
            }
            T::Sink => {
                self.bump();
                Convention::Sink
            }
            T::Var => {
                self.bump();
                Convention::Var
            }
            _ => Convention::Default,
        };
        let name = self.name("a parameter name");
        let ty = if self.eat(T::Colon) { Some(self.type_expr()) } else { None };
        let default = if self.eat(T::Eq) { Some(self.test()) } else { None };
        Param { span: self.since(start), convention, name, ty, default }
    }

    fn type_def(&mut self) -> Item {
        let start = self.span();
        self.bump(); // type
        let name = self.name("the type's name");
        let type_params = self.type_params();
        if self.eat(T::LParen) {
            let fields = self.fields(true);
            self.expect(T::RParen, "to close the record's fields");
            self.end_of_line("after the record");
            return Item::Record(RecordDef { span: self.since(start), name, type_params, fields });
        }
        if !self.expect(T::Eq, "after the type's name: `type T(fields)` or `type T = A | B`") {
            return Item::Error(self.since(start));
        }
        let mut variants = Vec::new();
        loop {
            let variant_start = self.span();
            let variant_name = self.name("a variant name");
            let fields = if self.eat(T::LParen) {
                let fields = self.fields(false);
                self.expect(T::RParen, "to close the variant's fields");
                Some(fields)
            } else {
                None
            };
            variants.push(Variant { span: self.since(variant_start), name: variant_name, fields });
            if !self.eat(T::Pipe) {
                break;
            }
        }
        self.end_of_line("after the sum type");
        Item::Sum(SumDef { span: self.since(start), name, type_params, variants })
    }

    /// Record fields are always named; a variant's may be positional types: `Num(int)`.
    fn fields(&mut self, named: bool) -> Vec<Field> {
        let mut fields = Vec::new();
        while !matches!(self.peek(), T::RParen | T::Newline | T::Eof) {
            let start = self.span();
            let field_name = if named || (self.at(T::Name) && self.peek_at(1) == T::Colon) {
                let name = self.name("a field name");
                self.expect(T::Colon, "after the field's name");
                Some(name)
            } else {
                None
            };
            let ty = self.type_expr();
            let default = if self.eat(T::Eq) { Some(self.test()) } else { None };
            fields.push(Field { span: self.since(start), name: field_name, ty, default });
            if !self.eat(T::Comma) {
                break;
            }
        }
        fields
    }

    fn end_of_line(&mut self, after: &str) {
        if !matches!(self.peek(), T::Eof | T::Dedent) {
            self.expect(T::Newline, after);
        }
    }

    fn impl_def(&mut self) -> ImplDef {
        let start = self.span();
        self.bump(); // impl
        let first = self.type_expr();
        let (trait_name, target) = if self.eat(T::For) { (Some(first), self.type_expr()) } else { (None, first) };
        let mut methods = Vec::new();
        if self.expect(T::Colon, "after the implemented type")
            && self.expect(T::Newline, "after `impl …:`")
            && self.expect(T::Indent, "for the methods")
        {
            while !matches!(self.peek(), T::Dedent | T::Eof) {
                self.reported = false;
                if self.at(T::Fn) {
                    methods.push(self.fn_def(true));
                    if self.reported {
                        self.skip_line();
                    }
                } else if self.eat(T::Newline) {
                } else {
                    self.error_here("expected a method (`fn`) in the `impl` block");
                    self.skip_line();
                }
            }
            self.eat(T::Dedent);
        }
        ImplDef { span: self.since(start), trait_name, target, methods }
    }

    fn trait_def(&mut self) -> TraitDef {
        let start = self.span();
        self.bump(); // trait
        let name = self.name("the trait's name");
        let type_params = self.type_params();
        let mut methods = Vec::new();
        if self.expect(T::Colon, "after the trait's name")
            && self.expect(T::Newline, "after `trait …:`")
            && self.expect(T::Indent, "for the trait's methods")
        {
            while !matches!(self.peek(), T::Dedent | T::Eof) {
                self.reported = false;
                if self.at(T::Fn) {
                    methods.push(self.fn_def(false));
                    if self.reported {
                        self.skip_line();
                    }
                } else if self.eat(T::Newline) {
                } else {
                    self.error_here("expected a method signature (`fn`) in the trait");
                    self.skip_line();
                }
            }
            self.eat(T::Dedent);
        }
        TraitDef { span: self.since(start), name, type_params, methods }
    }

    fn dotted(&mut self) -> Vec<Ident> {
        let mut path = vec![self.name("a module name")];
        while self.eat(T::Dot) {
            path.push(self.name("a module name"));
        }
        path
    }

    fn import(&mut self) -> Import {
        let start = self.span();
        if self.eat(T::Import) {
            let module = self.dotted();
            self.end_of_line("after the import");
            return Import { span: self.since(start), module, names: vec![] };
        }
        self.bump(); // from
        let module = self.dotted();
        let mut names = Vec::new();
        if self.expect(T::Import, "after the module's name") {
            if self.at(T::Star) {
                let span = self.span();
                self.report(
                    span,
                    "lotml has no `import *`: name what you import".into(),
                    vec!["a name"],
                    None,
                    "E0104",
                );
            } else {
                loop {
                    names.push(self.name("a name to import"));
                    if !self.eat(T::Comma) {
                        break;
                    }
                }
            }
        }
        self.end_of_line("after the import");
        Import { span: self.since(start), module, names }
    }

    fn test_def(&mut self) -> TestDef {
        let start = self.span();
        self.bump(); // test
        let (name, name_span) = if self.at(T::Str) {
            let token = self.bump();
            let literal = strings::split(self.text_of(token));
            let raw = &self.text_of(token)[literal.body.clone()];
            (strings::decode(raw, literal.raw).unwrap_or_default(), self.shifted(token.span))
        } else {
            let span = self.span();
            self.error_here("expected the test's name as a string");
            (String::new(), span)
        };
        let body = if self.expect(T::Colon, "after the test's name") {
            self.block()
        } else {
            Block { span: self.span(), stmts: vec![] }
        };
        TestDef { span: self.since(start), name, name_span, body }
    }

    // Statements --------------------------------------------------------------------

    /// After `:`: an indented block, or one simple statement on the same line.
    fn block(&mut self) -> Block {
        let start = self.span();
        if !self.at(T::Newline) {
            let stmt = self.simple_stmt();
            return Block { span: self.since(start), stmts: vec![stmt] };
        }
        self.bump();
        if !self.at(T::Indent) {
            let span = self.span();
            let found = self.found();
            self.report(
                span,
                format!("expected an indented block, found {found}"),
                vec!["an indented block"],
                Some((Span { start: span.start, end: span.start }, "    ".into())),
                "E0002",
            );
            return Block { span: self.since(start), stmts: vec![] };
        }
        self.bump();
        let mut stmts = Vec::new();
        while !matches!(self.peek(), T::Dedent | T::Eof) {
            if self.eat(T::Newline) {
                continue;
            }
            let outer = self.reported;
            self.reported = false;
            let before = self.pos;
            stmts.push(self.stmt());
            if self.reported && (self.pos == before || !self.at_line_start()) {
                self.skip_line();
            }
            self.reported = outer && self.reported;
        }
        self.eat(T::Dedent);
        Block { span: self.since(start), stmts }
    }

    fn stmt(&mut self) -> Stmt {
        match self.peek() {
            T::If => self.if_stmt(),
            T::While => {
                let start = self.span();
                self.bump();
                let test = self.test();
                let body = self.colon_block("after the condition");
                Stmt { span: self.since(start), kind: StmtKind::While { test, body } }
            }
            T::For => {
                let start = self.span();
                self.bump();
                let target = self.targets();
                self.expect(T::In, "after the loop variables");
                let iter = self.testlist();
                let body = self.colon_block("after the loop header");
                Stmt { span: self.since(start), kind: StmtKind::For { target, iter, body } }
            }
            T::Match => self.match_stmt(),
            T::Indent => {
                let span = self.span();
                self.report(
                    span,
                    "this line is indented deeper than its block".into(),
                    vec![],
                    Some((span, String::new())),
                    "E0002",
                );
                self.bump();
                Stmt { span, kind: StmtKind::Error }
            }
            _ => self.simple_stmt(),
        }
    }

    fn colon_block(&mut self, after: &str) -> Block {
        if self.at(T::LBrace) {
            let span = self.span();
            self.report(
                span,
                "a lotml block starts with `:` and an indented line, not `{`".into(),
                vec!["`:`"],
                Some((span, ":".into())),
                "E0103",
            );
            return Block { span, stmts: vec![] };
        }
        if self.expect(T::Colon, after) { self.block() } else { Block { span: self.span(), stmts: vec![] } }
    }

    fn if_stmt(&mut self) -> Stmt {
        let start = self.span();
        self.bump(); // if
        let mut branches = Vec::new();
        let test = self.test();
        let body = self.colon_block("after the condition");
        branches.push((test, body));
        let mut orelse = None;
        loop {
            if self.at(T::Elif) {
                self.bump();
                let test = self.test();
                let body = self.colon_block("after the condition");
                branches.push((test, body));
            } else if self.at(T::Else) {
                if self.peek_at(1) == T::If {
                    let span = Span { start: self.span().start, end: self.shifted(self.tokens[self.pos + 1].span).end };
                    self.report(
                        span,
                        "lotml writes `elif`, not `else if`".into(),
                        vec!["`elif`", "`:`"],
                        Some((span, "elif".into())),
                        "E0105",
                    );
                    self.bump();
                    self.bump();
                    let test = self.test();
                    let body = self.colon_block("after the condition");
                    branches.push((test, body));
                    continue;
                }
                self.bump();
                orelse = Some(self.colon_block("after `else`"));
                break;
            } else {
                break;
            }
        }
        Stmt { span: self.since(start), kind: StmtKind::If { branches, orelse } }
    }

    fn match_stmt(&mut self) -> Stmt {
        let start = self.span();
        self.bump(); // match
        let subject = self.test();
        let mut arms = Vec::new();
        if self.expect(T::Colon, "after the matched value")
            && self.expect(T::Newline, "after `match …:`")
            && self.expect(T::Indent, "for the `case` arms")
        {
            while !matches!(self.peek(), T::Dedent | T::Eof) {
                if self.eat(T::Newline) {
                    continue;
                }
                let outer = self.reported;
                self.reported = false;
                let arm_start = self.span();
                if !self.eat(T::Case) {
                    let span = self.span();
                    let found = self.found();
                    self.report(
                        span,
                        format!("expected `case` to start a match arm, found {found}"),
                        vec!["`case`"],
                        Some((Span { start: span.start, end: span.start }, "case ".into())),
                        "E0106",
                    );
                }
                let pattern = self.pattern();
                let body = self.colon_block("after the pattern");
                arms.push(Arm { span: self.since(arm_start), pattern, body });
                if self.reported {
                    self.skip_line();
                }
                self.reported = outer && self.reported;
            }
            self.eat(T::Dedent);
        }
        Stmt { span: self.since(start), kind: StmtKind::Match { subject, arms } }
    }

    fn pattern(&mut self) -> Pattern {
        let start = self.span();
        let kind = match self.peek() {
            T::Name => {
                let name = self.name("a pattern");
                if name.name == "_" {
                    PatternKind::Wildcard
                } else if self.eat(T::LParen) {
                    let mut args = Vec::new();
                    while !matches!(self.peek(), T::RParen | T::Newline | T::Eof) {
                        args.push(self.pattern());
                        if !self.eat(T::Comma) {
                            break;
                        }
                    }
                    self.expect(T::RParen, "to close the pattern");
                    PatternKind::Variant { name, args }
                } else {
                    PatternKind::Name(name)
                }
            }
            T::LParen => {
                self.bump();
                let mut items = Vec::new();
                while !matches!(self.peek(), T::RParen | T::Newline | T::Eof) {
                    items.push(self.pattern());
                    if !self.eat(T::Comma) {
                        break;
                    }
                }
                self.expect(T::RParen, "to close the tuple pattern");
                PatternKind::Tuple(items)
            }
            T::Int | T::Float | T::Str | T::True | T::False | T::None | T::Minus => PatternKind::Literal(self.factor()),
            _ => {
                self.error_here("expected a pattern");
                PatternKind::Error
            }
        };
        Pattern { span: self.since(start), kind }
    }

    fn simple_stmt(&mut self) -> Stmt {
        let start = self.span();
        let kind = match self.peek() {
            T::Var => {
                self.bump();
                let name = self.name("the variable's name");
                let ty = if self.eat(T::Colon) { Some(self.type_expr()) } else { None };
                self.expect(T::Eq, "in `var name = value`");
                let value = self.testlist();
                StmtKind::Var { name, ty, value }
            }
            T::Return => {
                self.bump();
                let value =
                    if matches!(self.peek(), T::Newline | T::Eof | T::Dedent) { None } else { Some(self.testlist()) };
                StmtKind::Return(value)
            }
            T::Assert => {
                self.bump();
                let test = self.test();
                let message = if self.eat(T::Comma) { Some(self.test()) } else { None };
                StmtKind::Assert { test, message }
            }
            T::Pass => {
                self.bump();
                StmtKind::Pass
            }
            T::Break => {
                self.bump();
                StmtKind::Break
            }
            T::Continue => {
                self.bump();
                StmtKind::Continue
            }
            T::Name
                if matches!(self.text_of(self.token()), "let" | "const")
                    && self.peek_at(1) == T::Name
                    && matches!(self.peek_at(2), T::Eq | T::Colon | T::Name) =>
            {
                self.declaration_keyword()
            }
            T::Name
                if matches!(
                    self.text_of(self.token()),
                    "raise" | "try" | "except" | "finally" | "with" | "def" | "class" | "global" | "nonlocal" | "yield"
                ) =>
            {
                self.python_statement();
                StmtKind::Error
            }
            _ => self.expression_stmt(),
        };
        let stmt = Stmt { span: self.since(start), kind };
        if !matches!(self.peek(), T::Eof | T::Dedent) && !self.reported {
            self.expect(T::Newline, "at the end of the statement");
        } else {
            self.eat(T::Newline);
        }
        stmt
    }
